--- a/Frontend/views/employee-registration.html
+++ b/Frontend/views/employee-registration.html
@@ -352,7 +352,8 @@
                                 <div class="col-8">
                                     <select id="religion" class="form-select form-select-sm">
                                         <option value="Islam" selected>Islam</option>
-                                        <option value="Christianity">Christianity</option>
+                                        <option value="Christian">Christian</option>
+                                        <option value="Hindu">Hindu</option>
                                         <option value="Other">Other</option>
                                     </select>
                                 </div>
