Update from Antigravity: Added Store fields (Food Exp Per Time, Roti Price), Allow Food dropdown options, and Alt+S shortcut for stores

--- a/Frontend/views/employee-registration.html
+++ b/Frontend/views/employee-registration.html
@@ -461,7 +461,9 @@
                                 <div class="col-4 pe-1">
                                     <select id="allowFood" class="form-select form-select-sm">
                                         <option value="No Food">No Food</option>
-                                        <option value="With Food">Yes</option>
+                                        <option value="1 Time Deduction">1 Time Deduction</option>
+                                        <option value="2 Time Deduction">2 Time Deduction</option>
+                                        <option value="Free">Free</option>
                                     </select>
                                 </div>
                                 <div class="col-4 ps-1">
