--- a/Frontend/views/wh-sale.html
+++ b/Frontend/views/wh-sale.html
@@ -256,7 +256,7 @@
                                 </div>
                                 <div class="col-md-2">
                                     <label class="form-label">Date</label>
-                                    <input type="date" class="form-control" id="invoiceDate">
+                                    <input type="date" class="form-control" id="invoiceDate" readonly>
                                 </div>
                                 <div class="col-md-3">
                                     <label class="form-label">Remarks</label>
