--- a/Frontend/views/groups.html
+++ b/Frontend/views/groups.html
@@ -262,10 +262,17 @@
                                                 class="checkbox-label" for="groups">Group Rights</label></li>
                                         <li><input type="checkbox" id="stores" class="form-check-input"><label
                                                 class="checkbox-label" for="stores">Stores</label></li>
-                                        <li><input type="checkbox" id="items" class="form-check-input"><label
-                                                class="checkbox-label" for="items">Items</label></li>
                                         <li><input type="checkbox" id="parties" class="form-check-input"><label
                                                 class="checkbox-label" for="parties">Parties</label></li>
+                                        <li>
+                                            <input type="checkbox" id="commission_item" class="form-check-input"><label
+                                                class="checkbox-label" for="commission_item">Commission Item</label>
+                                            <ul>
+                                                <li><input type="checkbox" id="commission_delete_item"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="commission_delete_item">Can Delete</label></li>
+                                            </ul>
+                                        </li>
                                         <li>
                                             <input type="checkbox" id="wht_supplier_link"
                                                 class="form-check-input"><label class="checkbox-label"
